# LigaVibroLab

./: CMakeLists.txt  calcamplitud.cpp  calcamplitud.h  calcamplitud.ui  chartsettings.cpp  chartsettings.h  chartsettings.ui  correctinput.cpp  correctinput.h  correctinput.ui  funcExtension.cpp  funcExtension.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  report.cpp  report.h  resources.qrc  stepvibro.cpp  stepvibro.h  style.qss  supportmodul.cpp  supportmodul.h  supportmodul.ui  ui_mainwindow.h  vibrodata.cpp  vibrodata.h
